compiler/testData/diagnostics/tests/redeclarations/ConflictingExtensionProperties.fir.kt
package foo

<!REDECLARATION!>val Int.foo: Int get() = 2<!>
<!REDECLARATION!>val Int.foo: Int get() = 3<!>
